[package]
name = "pi-sweeper-bot-pro"
version = "1.0.0"
edition = "2021"
authors = ["Your Name"]
description = "High-performance Pi Sweeper Bot"

[dependencies]
# Backend
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
futures-util = "0.3"
stellar-horizon = "0.26.1"
base64 = "0.13.0"

# Frontend
yew = { version = "0.20" }
yew-router = "0.17"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "HtmlInputElement",
  "WebSocket",
  "MessageEvent",
  "ErrorEvent",
  "CloseEvent",
] }
gloo-net = "0.2"
gloo-console = "0.2"
gloo-timers = { version = "0.2", features = ["futures"] }

[lib]
crate-type = ["cdylib", "rlib"]