[package]
name = "pi_network"
version = "2.0.0"
edition = "2021"
description = "Real Pi Network mainnet client"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stellar_sdk = "0.1.4"
stellar-base = "0.5.0"
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
regex = "1.5"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.4"
parking_lot = "0.12"
tracing = "0.1"

# Real crypto dependencies (fixed)
ed25519-dalek = "2.0"
bs58 = "0.5"
bip39 = "1.0"  # Use bip39 instead of tiny-bip39